<resources>
    <string name="app_name">MockSMS</string>
    <string name="action_settings">Settings</string>
    <string name="e_g_9153645">e.g. 99******69</string>
    <string name="pick">Pick</string>
    <string name="sender_phone_number">Sender/Receiver\'s Phone Number</string>
    <string name="pick_date">Pick</string>
    <string name="_01_01_2000">SUN, 12 AUG 2018 23:48</string>
    <string name="sms_type">SMS Type</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="sent">Sent</string>
    <string name="draft">Draft</string>
    <string name="queued">Queued</string>
    <string name="failed">Failed</string>
    <string name="sms_states">SMS States</string>
    <string name="enter_message_here">Enter Message Here</string>
    <string name="help_msg">I\'m not yet....why I don\'t know...what will....I....whatever it\'s limited to 160 characters</string>
    <string name="extra_sms_properties">Extra SMS Properties</string>
    <string name="set_extra_sms_properties">Set Extra SMS Properties</string>
    <string name="sms_is_read">SMS is read ?</string>
    <string name="sms_is_seen">SMS is seen ?</string>
    <string name="sms_is_delivered">SMS is delivered ?</string>
    <string name="enable_sim_slot">Enable SIM slot (Custom) ?</string>
    <string name="enable_sim_imsi">Enable SIM IMSI (Custom) ?</string>
    <string name="enable_reply_path_present_for_sms_app">Enable REPLY_PATH_PRESENT for SMS App ?</string>
    <string name="enable_service_center_details">Enable Service Center Details (Custom) ?</string>
    <string name="enable_creation_date">Enable Creation / Receiving Time Difference (Custom) ?</string>
    <string name="enable_status_for_sent_messages">Enable Status ? (For Sent Messages)</string>
    <string name="enable_extra_sms_properties">Enable Extra SMS Properties</string>
    <string name="only_1_or_2_allowed">only 1 or 2 allowed</string>
    <string name="sim_slot">SIM Slot</string>
    <string name="sim_imsi">SIM IMSI</string>
    <string name="_19_char_integer">64 bit field</string>
    <string name="service_center_number">Service Center Number</string>
    <string name="_919900000005">+919900000005</string>
    <string name="time_difference_">Time Difference Between Sent/Received Events (Minutes)</string>
    <string name="max_180_minutes">Max 180 minutes</string>
    <string name="sms_status_for_sent_messages">SMS Status (For Sent Messages)</string>
    <string name="max_999">Max 9999 (Nearly 1 Week)</string>
    <string name="why_you_shouldn_t_use_cracked_apps">Why you shouldn\'t use cracked apps :</string>
    <string name="crackers_">• Crackers can put malicious code that steals your personal information</string>
    <string name="your_device_may_get_bricked">• Your device may get bricked</string>
    <string name="expose_">• You expose your device to hackers without your knowledge</string>
    <string name="_cred">• You may face financial loss due to unwanted exposure of credentials</string>
    <string name="hey">Hey</string>
    <string name="crashes_usage_issues">• Crashes/Usage Issues</string>
    <string name="no_support">• No Support</string>
    <string name="i_understand">I understand</string>
    <string name="unlock">Unlock</string>
    <string name="temporary_unlock">Temporary Unlock</string>
    <string name="add_time">Add Time</string>
    <string name="ad_unit_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="none">none</string>
    <string name="setting_up_mocksms">Setting up MockSMS</string>
    <string name="hi">Hi!</string>
    <string name="please_select_a_mode_to_continue_using">Please select a mode to continue using MockSMS</string>
    <string name="your_choice_is_automatically_saved">You can just come back and switch modes later.</string>
    <string name="phone_number">Sender Phone Number</string>
    <string name="so">So</string>
    <string name="this_is">this is</string>
    <string name="simple_mode">Simple Mode</string>
    <string name="write_message_160_letters_limit">Write message (160 letters limit)</string>
</resources>
