<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.function.SimpleMode">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="128sp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/proxima_asi_r"
                android:gravity="start"
                android:text="@string/so"
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/proxima_asi_r"
                android:gravity="start"
                android:text="@string/this_is"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/proxima_asi_r"
                android:gravity="start"
                android:text="@string/simple_mode"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:hint="@string/phone_number"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/hi"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sender_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:drawableEnd="@drawable/ic_open"
                    android:inputType="phone"
                    android:maxLength="13"
                    app:drawableTint="@color/primary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/write_message_160_letters_limit"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/hi"
                app:startIconDrawable="@drawable/ic_sms"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sender_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:inputType="textMultiLine|textLongMessage"
                    android:maxLength="160"
                    android:minLines="3"
                    app:drawableTint="@color/primary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.ncorti.slidetoact.SlideToActView
                android:id="@+id/save_sms_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                app:border_radius="5dp"
                app:icon_margin="0dp"
                app:inner_color="@color/white"
                app:outer_color="@color/primary"
                app:slider_height="52dp"
                app:text="Save SMS" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
    </RelativeLayout>

</layout>
